[package]
name = "cons-laws"
version = "0.1.4-alpha.3"
edition = "2018"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "Particle methods to solve 1D conservation laws"
license = "MIT"
repository = "https://github.com/FedericoStra/cons-laws"
keywords = ["numerical-analysis", "conservation-laws", "particles", "PDE", "ODE"]
categories = ["algorithms", "mathematics", "science", "simulation"]

[features]
ode_solver = ["nalgebra", "ode_solvers"]

[dependencies]
mathru = "0.9.1"
nalgebra = { version = "0.29.0", optional = true }
num-traits = "0.2.14"
ode_solvers = { version = "0.3.3", optional = true }

[dev-dependencies]
ode_solvers = "0.3.3"
# approx = "0.5.0"
# assert-impl = "0.1.3"
# float-cmp = "0.9.0"
# float-ord = "0.3.2"
# nalgebra = "0.28.0"
plotters = "0.3.1"
# pretty_assertions = "0.7.2"
# static_assertions = "1.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# lto = true

[package.metadata.release]
no-dev-version = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
all-features = true
rustc-args = ["--cfg", "docsrs"]
